--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -272,6 +276,7 @@ button:disabled {
 }
 
 .user-problem textarea {
+  box-sizing: border-box;
   width: 100%;
   min-height: clamp(80px, 15vh, 100px);
   padding: clamp(0.75rem, 1.5vw, 1rem);
